# rpi-ai

./: .env.example  .gitignore  Dockerfile  README.md  construct.yaml  docker-compose.yml  post_install.sh  pyproject.toml
.github/actions/docker-check-containers/: action.yml
.github/actions/setup-python-dev/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: build.yml  build_api.yml  ci.yml  ci_api.yml  ci_ui.yml  docker.yml
.github/workflows/actions/setup-python-dev/: action.yml
config/: ai_config.json  config.json
configuration/: config.json
release/: construct.yaml  install_rpi_ai.sh  post_install.sh
rpi_ai/: api_types.py  chatbot.py  chatbot_server.py  config.py  main.py  models.py
rpi_ai/function_calling/: functions_list_base.py  system_info.py
rpi_ai/models/: chatbot.py
src/: app.py
src/models/: chatbot.py  logger.py
src/rpi_ai/: api_types.py  app.py  config.py  functions.py  main.py  types.py
src/rpi_ai/function_calling/: functions_list_base.py  system_info.py
src/rpi_ai/function_calling/devices/: tuya_device.py  vybra_spire.py
src/rpi_ai/models/: audiobot.py  chatbot.py  logger.py  types.py
tests/: conftest.py  test_chatbot.py  test_chatbot_server.py  test_config.py  test_functions.py  test_main.py  test_models.py
tests/function_calling/: test_system_info.py
tests/models/: test_types.py
tests/rpi_ai/: conftest.py  test_api_types.py  test_audiobot.py  test_chatbot.py  test_config.py  test_functions.py  test_main.py  test_models.py  test_types.py
tests/rpi_ai/function_calling/: test_functions_list_base.py  test_system_info.py
tests/rpi_ai/models/: conftest.py  test_audiobot.py  test_chatbot.py  test_logger.py  test_types.py
ui/: .gitignore  README.md  pubspec.yaml
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/ios/Runner/: Info.plist
ui/lib/: app_state.dart  main.dart  types.dart
ui/lib/components/: notifications.dart  settings_dialog.dart  timeout_dialog.dart
ui/lib/components/app_bar/: custom_app_bar.dart  logout_button.dart  settings_dialog.dart  switch_chat_mode.dart
ui/lib/components/audio/: microphone_button.dart  microphone_permission_button.dart  request_microphone_permission_button.dart  status_display_box.dart
ui/lib/components/conversation/: speech_input.dart  switch_conversation_mode.dart  text_input.dart
ui/lib/components/drawer/: menu_drawer.dart  menu_item.dart
ui/lib/components/messages/: message_container.dart  message_input.dart  message_list.dart
ui/lib/helpers/: data_storage_helper.dart  http_helper.dart  text_format_helper.dart
ui/lib/pages/: command_page.dart  conversation_page.dart  home_page.dart  homepage.dart  login_page.dart  main_page.dart  message_page.dart  settings_page.dart  speech_page.dart  text_page.dart
ui/lib/state/: app_state.dart  message_state.dart  notification_state.dart  settings_state.dart  speech_state.dart
ui/test/: app_state_test.dart  types_test.dart  types_test.mocks.dart  widget_test.dart
ui/test/components/: notifications_test.dart  settings_dialog_test.dart  timeout_dialog_test.dart
ui/test/components/app_bar/: custom_app_bar_test.dart  logout_button_test.dart  settings_dialog_test.dart  settings_dialog_test.mocks.dart  switch_chat_mode_test.dart
ui/test/components/audio/: microphone_button_test.dart  microphone_permission_button_test.dart  status_display_box_test.dart
ui/test/components/conversation/: speech_input_test.dart  switch_conversation_mode_test.dart  text_input_test.dart  text_input_test.mocks.dart
ui/test/components/drawer/: menu_drawer_test.dart  menu_item_test.dart
ui/test/components/messages/: message_container_test.dart  message_input_test.dart  message_input_test.mocks.dart  message_list_test.dart
ui/test/helpers/: data_storage_helper_test.dart  http_helper_test.dart  http_helper_test.mocks.dart  text_format_helper_test.dart
ui/test/pages/: command_page_test.dart  command_page_test.mocks.dart  conversation_page_test.dart  conversation_page_test.mocks.dart  home_page_test.dart  home_page_test.mocks.dart  homepage_test.dart  homepage_test.mocks.dart  login_page_test.dart  login_page_test.mocks.dart  main_page_test.dart  message_page_test.dart  message_page_test.mocks.dart  settings_page_test.dart  settings_page_test.mocks.dart  speech_page_test.dart  text_page_test.dart
ui/test/state/: app_state_test.dart  message_state_test.dart  notification_state_test.dart  settings_state_test.dart  speech_state_test.dart
